# mcp-context-forge

./: MANIFEST.in
.github/workflows/: rust-plugins.yml
plugins_rust/: Cargo.toml
plugins_rust/benches/: pii_filter.rs
plugins_rust/pii_filter/: Cargo.toml  Makefile
plugins_rust/pii_filter/benchmarks/: compare_pii_filter.py
plugins_rust/pii_filter/src/: lib.rs
plugins_rust/pii_filter/tests/: integration.rs
plugins_rust/src/pii_filter/: config.rs  detector.rs
