[workspace]
members = [".", "pii_filter"]
resolver = "2"

[workspace.package]
version = "1.0.0-BETA-2"
edition = "2024"
authors = ["MCP Gateway Contributors"]
license = "Apache-2.0"
repository = "https://github.com/IBM/mcp-context-forge"

[package]
name = "plugins_rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance Rust implementations of MCP Gateway plugins"

[lib]
name = "plugins_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py311"] }
pii_filter = { path = "pii_filter" }

[features]
# Extension module feature (for Python import)
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
