[package]
name = "pii_filter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance PII detection and masking library"

[lib]
name = "pii_filter_rust"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py311"] }
regex = "1.12"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sha2 = "0.10"
uuid = { version = "1.18", features = ["v4"] }

[features]
# Extension module feature (for standalone Python module builds)
extension-module = ["pyo3/extension-module"]
default = []

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.8"

[[bench]]
name = "pii_filter"
harness = false
